--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <!--//Pie de Pagina-->
     <footer>
         <p class="copyright">&copy; Copyright 2024 - Encriptador de Texto -  Frantz Hinrichsen</p>
-        <a href="#" rel="">
+        <a href="https://www.linkedin.com/in/frantz-hinrichsen-927394270/" rel="">
          <img src="./imagenes/linkedin.svg" alt="logo_linkedin" class="linkedin">
         </a>
-            <a href="#" rel="">
+            <a href="https://github.com/einhander-coder" rel="">
             <img src="./imagenes/github.svg" alt="logo_github" class="github">
         </a>  
     </footer>
